Small change of basal model

--- a/SupplementalExperimentalProcedures.tex
+++ b/SupplementalExperimentalProcedures.tex
@@ -549,8 +549,7 @@ In Model 3, we randomise the orientation of the division axes in the first divis
 \noindent
 \textbf{Model 4: Basal growth}\\
 \noindent
-\TODO{update}
-Model 4 is designed to check whether the lateral root growth itself is responsible for the emergence of the observed sequence of periclinal divisions. For this purpose, we change the deformation behaviour of the B\'ezier surface from an equidistant distribution of control points to a distribution in which the control points are growing faster towards the dome tip (see Illustration~\ref{fig:basalGrowth}). We force the first division round to be an asymmetric anticlinal one (see Illustration~\ref{fig:founderCellsSetting}, right) and we use the Besson-Dumais rule for subsequent divisions. As a result, the model leads to more dominant cell divisions at the base of the primordium. This model impairs the high-order pattern of periclinal divisions (see Figure 5J-L in main text and Figure~\ref{fig:S6}) \TODO{correct ref} although the layer formation and division orientations are similar to the model results using an equidistant distribution of control points.
+Model 4 is designed to check whether the lateral root growth itself is responsible for the emergence of the observed sequence of periclinal divisions. For this purpose, we change the deformation behaviour of the B\'ezier surface from an equidistant distribution of control points to a distribution in which the control points are growing faster towards the dome tip (see Illustration~\ref{fig:basalGrowth}).  We use the Besson-Dumais rule for all divisions. As a result, the model leads to more dominant cell divisions at the base of the primordium. This model impairs the high-order pattern of periclinal divisions (see Figure 5J-L in main text and Figure~\ref{fig:S6}) \TODO{correct ref} although the layer formation and division orientations are similar to the model results using an equidistant distribution of control points.
 
 %\noindent
 %\textbf{Model 5: 1\textsuperscript{st} asymmetric then geometric}\\
