--- a/SupplementalFigures.tex
+++ b/SupplementalFigures.tex
@@ -9,23 +9,16 @@
 %\clearpage
 %
 \section*{Supplemental Figures}
-\begin{figure}[p]
+\begin{figure}[!ht]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S1-01.jpg}
+	\begin{overpic}[width=0.91\linewidth]{images/S1.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-{\bf Lateral root induction by gravistimulation.} Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. See Supplemental movie  \href{http://youtu.be/sLvVCbWye-E}{\textcolor{blue}{[LINK]}}.
-
-{\bf Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM).} 
-Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition.
-
-{\bf Exponential growth profile of the lateral root primordia.} For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve.
-
-{\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.} Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are in Table~\ref{tab:metadata}.
-
-{\bf Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. } Single slice of the master cell file in dataset \#131203 at indicated time points. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{A-C}) The cell divided without building a cell wall. (\textbf{D-F}) Both daughter cells divided periclinal and their cell walls connected in the center creating two binucleated cells. (\textbf{G}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
+Related to Figure 1.
+{\bf Time lapse recording of lateral root primordia development in five wild type datasets and the \emph{aurora} double mutant.}
+{\bf A:} Lateral root induction by gravistimulation. Seven days old plants were rotated by 90$\degree$ for different time periods. The number of emerged lateral roots in the region of the bend were counted, three days later. In total, 94 plants from three independent experiments were analysed. {\bf B:} Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM). Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition. {\bf C:} For each dataset, the images show five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation and the signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are listed in Table~\ref{tab:metadata}. {\bf D:} Exponential growth profile of the lateral root primordia. For each indicated dataset, the number of nuclei is plotted (blue curve) as a function of time points since gravistimulation (k: growth factor, T: doubling time). The red dashed line represents the fitted exponential curve. {\bf E-K:} Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. A single slice of the master cell file in dataset \#131203 at indicated time points is shown. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (\textbf{E-G}) The cell divided without building a cell wall. (\textbf{H-J}) Both daughter cells divided periclinally with cell walls connected in the centre creating two binucleated cells. (\textbf{K}) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.
 }
 \label{fig:S1}
 %
@@ -33,12 +26,13 @@ Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish se
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S2-01.jpg}
+	\begin{overpic}[width=1.\linewidth]{images/S2.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-{\bf All cell lineages located in the master cell file of the five wild type datasets and the \emph{aurora} mutant.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The ``bricks'' visualisation at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell in the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree followed the division sequence anticlinal, periclinal, anticlinal, periclinal and anticlinal). The visualisation is done in \textit{scifer}.
+Related to Figure 1.
+{\bf Cell lineages of the five wild type datasets and the \emph{aurora} double mutant.} The nodes are colour-coded based on the corresponding division type: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. Labels on the left show the time points and top labels display the total number of divisions. The trees marked by orange rectangles are the ones located in the master cell file of a dataset. The ``bricks'' visualisation at the bottom of each tree allows a comparison of division sequences between different trees. Each column represents the division sequence of a cell until the last segmented time point. The number of columns corresponds to the total number of cells at the last segmented time point, whereas the number of rows indicates the total number of division rounds (e.g. the leftmost leaf cell in the top left tree in dataset \#120830 follows the division sequence anticlinal, anticlinal, periclinal and anticlinal). The visualisation is done in \textit{scifer}.
 }
 \label{fig:S2}
 %
@@ -46,14 +40,13 @@ Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish se
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S3-01.jpg}
+	\begin{overpic}[width=1.\linewidth]{images/S3.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-{\bf Layer visualisations of the five datasets.} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions.
-
-{\bf Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of cells.} The layer assignment is given by a unique sequence (colour) and each dataset starts in a single layer (\textbf{0}). When a cell divides periclinally, its daughter cells are assigned to an outer (initially \textbf{01}) and an inner layer (initially \textbf{02}). The visualisation is done in \textit{scifer}. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.
+Related to Figure 2.
+{\bf Layer visualisations of the five wild type datasets.} {\bf Top:} On top of each column, all cell nuclei of a dataset are shown in the last time point of segmentation in side and radial views. Each row shows the cell nuclei of an individual cell file (label at top right). Each cell nucleus is coloured according to the sequence of periclinal divisions. {\bf Bottom:} Division sequence trees along the number of cells. Each layer assignment is given by a unique colour. The visualisation is done in \textit{scifer}.
 }
 \label{fig:S3}
 %
@@ -61,18 +54,13 @@ Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish se
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S4-01.jpg}
+	\begin{overpic}[width=1.\linewidth]{images/S4.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-{\bf Reconstruction of five wild type lateral root primordia.} For each indicated dataset, the spatial distribution of cell nuclei is represented. The first and last time point of segmented nuclei as well as the 143-cell stage are shown in the front, side and radial views. Clonally related cells share the same colour. The colour scheme used is identical to Figure 1G (main text). Links to movies of each dataset are listed in~\ref{sec:suppmovies}.
-
-{\bf Single cell initiation events are restricted to the periphery of the field of founder cells.} (\textbf{A}) First time point of the membrane channel in the front view. (\textbf{B}) A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are coloured in yellow or orange while the other cell files are illustrated in grey. The arrowhead indicates founders not belonging to a pair of pericycle cells.
-
-{\bf Timing of each division per cell file.} For each indicated round of division (sub panels cycle 1$, \ldots$ Cycle 6), each cell division is plotted according to its cell file location and its time of occurrence (since the first division). The dashed box indicates the master cell file. All datasets are considered.
-
-{\bf Correlation between the topology of endodermis cells and most contributing founders.} (\textbf{A}) First time point of the membrane channel in the front view. (\textbf{B}) A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are coloured in yellow or orange while the other cell files are given in grey. The white-magenta dashed line represents the contours of the overlaying endodermis cells. The blue arrowhead indicates the founder contributing most to the primordium.
+Related to Figure 3.
+{\bf Reconstruction of five wild type lateral root primordia and analysis of cell file information.} {\bf A:} For each indicated dataset, the spatial distribution of cell nuclei is represented. The first and last time point of segmented nuclei as well as the 143-cell stage are shown in the front, side and radial views. Clonally related cells share the same colour which indicated the cell file assignment. {\bf B:} First time point of the membrane channel in the front view. {\bf C:} Single cell initiation events are restricted to the periphery of the field of founder cells. A sketch of the position of the cell boundaries. Cells in the master cell file are coloured in light and dark green, respectively. The cells in the two flanking cell files are coloured in yellow or orange while the other cell files are illustrated in grey. The red arrowhead indicates founders not belonging to a pair of pericycle cells. {\bf D:} Correlation between the topology of endodermis cells and most contributing founders. The white-magenta dashed line represents the contours of the overlaying endodermis cells. The blue arrowhead indicates the founder contributing most to the primordium. {\bf E:} Pericycle cell border positions relative to the actual centre. {\bf F:} Timing of each division per cell file. For each indicated round of division (sub panels cycle 1$, \ldots$ Cycle 6), each cell division is plotted according to its cell file location and its time of occurrence (since the first division). The dashed box indicates the master cell file and all datasets are considered.
 }
 \label{fig:S4}
 %
@@ -80,12 +68,13 @@ Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish se
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S5-01.jpg}
+	\begin{overpic}[width=1.\linewidth]{images/S5.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-{\bf Orientation of divisions in relation to the cell geometry.} For each dataset, single sections along indicated cell files (overview upper left) are shown. The sections show several time points (\textbf{A-E}). Cell divisions are assigned into two classes depending on the size of the cell wall relative to the cell dimensions. Yellow- division along the short axis , blue - division along the long axis.
+Related to Figure 4.
+{\bf Division analysis of three wild type datasets.} {\bf Top:} Orientation of divisions in relation to the cell geometry. For each dataset, single sections along indicated cell files (overview upper left) are shown. The sections show several time points (\textbf{A-G}). Cell divisions are assigned into two classes depending on the length of the cell wall relative to the cell dimensions: along the long (blue) axis and along the short (yellow) axis. {\bf Bottom:} Quantitative analysis of classified cell divisions for four division cycles.
 }
 \label{fig:S5}
 %
@@ -93,12 +82,13 @@ Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish se
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.\linewidth]{images/S6-01.jpg}
+	\begin{overpic}[width=1.\linewidth]{images/S6.pdf}
 	\end{overpic}
 \end{figure}
 \clearpage
 \captionof{figure}[]{
-{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented (\textbf{A} corresponds to Figure 1A in main text, \textbf{B} to Figure 5D, \textbf{C} to Figure 5G and \textbf{D} to Figure 5J). Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers as illustrated in Figure 2D (main text). The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells.
+Related to Figure 5.
+{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented (\textbf{A} is related to Figure 1A, \textbf{B} is related to Figure 5D, \textbf{C} is related to Figure 5G and \textbf{D} is related to Figure 5J). Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers generated by the sequence of periclinal divisions. The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells. At the bottom of each model, the value of the used area ratio as well as the average number of cells, anticlinal and periclinal divisions are listed.
 }
 \label{fig:S6}
 %
