--- a/suppMat.tex
+++ b/suppMat.tex
@@ -91,7 +91,7 @@
 \usepackage{wrapfig}
 
 % for long tables
-\usepackage{longtable}
+\usepackage{longtable, needspace}
 \usepackage{pdflscape}
 
 % own itemize environment for better left margin
@@ -209,17 +209,7 @@ S\citealp{#3}]
 %\include{SupplementalMovies}
 %\include{SupplementalDatasets}
 \include{SupplementalExperimentalProcedures}
-
-\clearpage
-% renaming of references
-\addto\captionsenglish{\renewcommand{\refname}{\section*{Supplemental References}}}
-\renewcommand{\refname}{Supplemental References}
-% list of sources included in the table of contents: 
-%\addcontentsline{toc}{section}{%
-% \numberline{}Supplemental References}
-% using of own bibtex format
-\bibliographystyle{bib/Science}
-\bibliography{bib/lit.bib}
+\include{SupplementalReferences}
 
 % end of document
 \end{document}
