Fixed: table title and table on two pages

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,letterpaper, final]{article}
+\documentclass[10pt,letterpaper, draft]{article}
 \pagestyle{empty} % no page numbers
 \usepackage{ocg}
 \usepackage{times}
@@ -91,7 +91,7 @@
 \usepackage{wrapfig}
 
 % for long tables
-\usepackage{longtable, needspace}
+\usepackage{longtable}
 \usepackage{pdflscape}
 
 % own itemize environment for better left margin
