--- a/SupplementalTables.tex
+++ b/SupplementalTables.tex
@@ -3,9 +3,6 @@
 \makeatletter 
 \renewcommand{\thetable}{S\@arabic\c@table}
 \makeatother
-
-\Needspace{5\baselineskip}
-\section*{Supplemental Tables}
 %\renewcommand*\listtablename{\vspace{-1.3cm}}
 %\listoftables
 %
@@ -31,7 +28,6 @@
 %	\label{tab:developmentalStages}
 %\end{table}
 %
-\setlength{\tabcolsep}{0.2em}
 %
 %\begin{table}
 %\small
@@ -70,7 +66,9 @@
 %
 %\clearpage
 %
+\setlength{\tabcolsep}{0.2em}
 \begin{sidewaystable}[!ht]
+\begin{picture}(0,0)\put(610,0){\rotatebox{-90}{\parbox{\textwidth}{\section*{Supplemental Table}}}}\end{picture}
 	\miniscule
 \begin{longtable}{@{} l l l l l l l @{}}
 \toprule
